[package]
name = "site-gen"
description = "sksat static site generator"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
pulldown-cmark = "0.9.1"
writedown = "0.1.0"
writedown-html = "0.1.0"
